# halo_custom_field_builder

./: .env.template  .gitignore  Cargo.toml  README.md  source.csv
.github/workflows/: build.yml
src/lib/: config.rs  inbound.rs
src/lib/domain/: import_result.rs  logging.rs  mod.rs
src/lib/domain/models/: custom_field.rs  mod.rs
src/lib/domain/models/custom_field/: field_type.rs  label.rs  name.rs
src/lib/domain/models/custom_field/field_type/: input_types.rs
src/lib/domain/models/custom_field/field_type/input_types/: date_input_type.rs  single_select_input_type.rs  text_input_type.rs
src/lib/inbound/: readers.rs  screens.rs
src/lib/outbound/: field_client.rs  http_custom_field.rs  mod.rs
src/lib/outbound/auth/: client.rs  token.rs
